# cuda_test

Eigen_test/: CMakeLists.txt  main.cu
finite_difference/: CMakeLists.txt  finite_difference.cu
finite_difference_2D/: CMakeLists.txt  finite_difference_2D.cu
finite_difference_with_load/: CMakeLists.txt  finite_difference_2D.cu
matrix_mul/: CMakeLists.txt  matrix_mul.cu
shered_memory/: CMakeLists.txt  main.cu
vector_add/: CMakeLists.txt  vector_add.cu
